[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensu-sdk"
version = "0.6.0"
description = "Python SDK for the Sensu AI observability platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sensu Inc" }]
keywords = ["ai", "observability", "telemetry", "llm", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx>=0.25.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai    = ["openai>=1.0.0"]
langchain = ["langchain>=0.1.0"]
all       = ["anthropic>=0.20.0", "openai>=1.0.0", "langchain>=0.1.0"]
dev       = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "anyio[trio]",
    "mypy>=1.0",
    "ruff",
]

[project.urls]
Homepage   = "https://sensu-ai.com"
Repository = "https://github.com/sensu-inc/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["sensu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
